agent-dialogue-ui/chat_deployment_nginx-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
annotations:
  cloud.google.com/network-tier: "PREMIUM"
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: DEPLOYMENT_NAME
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DEPLOYMENT_NAME
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: chat-app-custom
  replicas: 1
  template:
    metadata:
      labels:
        app: DEPLOYMENT_NAME
        app.kubernetes.io/name: chat-app-custom
    spec:
      containers:
      - name: chat
        image: IMAGE_REPO/chat:latest
        imagePullPolicy: Always
        stdin: true
        ports:
          - containerPort: 80
