agent-dialogue-ui/chat_deployment_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: chat-app
  type: LoadBalancer
  loadBalancerIP: "34.118.4.64"
  # type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: chat-app-custom
  replicas: 1
  template:
    metadata:
      labels:
        app: chat-app
        app.kubernetes.io/name: chat-app-custom
    spec:
      containers:
      - name: chat
        image: europe-west2-docker.pkg.dev/agentdialogue-2cd4b/task-mad-images-repository/chat:latest
        #imagePullPolicy: Never
        imagePullPolicy: Always
        stdin: true
        ports:
          - containerPort: 80
