agent-dialogue-ui/chat_managed_cert_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: chat-ip
    # Enable this flag if we want to use the self-managed certificate
    # networking.gke.io/managed-certificates: chat-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: chat-service
      port:
        number: 80
